# cs43l22-embedded

./: Cargo.toml  README.md
examples/stm32f4/: Cargo.toml  build.rs  info.txt  rust-toolchain.toml
examples/stm32f4/.cargo/: config.toml
examples/stm32f4/src/: beeps.rs  sine.rs
src/: fmt.rs  lib.rs
